--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uicomp",
+  "name": "simple-typescript-web-enviroment",
   "version": "1.0.0",
   "author": "redshoga",
   "license": "UNLICENSED",
